[package]
name = "netgrasp"
version = "0.11.0"
authors = ["Jeremy Andrews <jeremy@tag1consulting.com>"]
edition = "2018"

[dependencies]
arp-toolkit = "0.3"
clap = { version = "4.3", features = ["derive"] }
#dns-lookup = "2.0"
figment = { version = "0.10", features = ["env", "toml"] }
if-addrs = "0.10"
log = "0.4"
mac_oui = { version = "0.4", features = ["with-db"] }
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simplelog = "0.12"
tokio = { version = "1", features = ["full"] }

#rqpush = "^0.4"
#lazy_static = "^1.3.0"
#diesel = { version = "^1.4", features = ["sqlite", "numeric"] }
#diesel_migrations = "^1.4"
#handlebars = "^2"
#chrono = "^0.4"
