[package]
name = "netgrasp"
version = "0.11.0"
authors = ["Jeremy Andrews <jeremy@tag1consulting.com>"]
edition = "2018"

[workspace]
members = [".", "netgrasp_entity", "netgrasp_migration"]

[dependencies]
netgrasp_entity = { path = "netgrasp_entity" }
netgrasp_migration = { path = "netgrasp_migration" }

arp-toolkit = "0.3"
chrono = "^0.4"
clap = { version = "4.3", features = ["derive"] }
dns-lookup = "2.0"
figment = { version = "0.10", features = ["env", "toml"] }
if-addrs = "0.10"
log = "0.4"
mac_oui = { version = "0.4", features = ["with-db"] }
async-once-cell = "0.5"
reqwest = { version = "0.11", features = ["json"] }
sea-orm = { version = "0.10", features = ["sqlx-all" , "runtime-tokio-rustls", "macros" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simplelog = "0.12"
tokio = { version = "1", features = ["full"] }

#rqpush = "^0.4"
#lazy_static = "^1.3.0"
#handlebars = "^2"
